--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/08bd4a5ff8.js"></script>
 
 </head>
-<body style="background-color:#f3f3cc;">
+<body class="homeBackground">
   <app-root></app-root>
 </body>
 </html>
